nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
  #annotations:
  #prometheus.io/scrape: "true"
  #prometheus.io/port: "80"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
#status:
#  loadBalancer: {}
