nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
spec:
 ingressClassName: nginx
 rules:
 - host: nginx.kubernetes.cn
   http:
     paths:
     - backend:
         service:
           name: nginx
           port:
             number: 80
       path: /
       pathType: Prefix
